--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
-
+spring.datasource.username=dbuser
+spring.datasource.password=secrets
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.url=jdbc:postgresql://localhost:5433/blaze-and-boot-db
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.docker.compose.file=docker/compose.yaml
+spring.jpa.hibernate.ddl-auto=create
