remove springboot deps for docker, change name to be inline with postgresql convention

--- a/docker/compose.yaml
+++ b/docker/compose.yaml
@@ -6,6 +6,6 @@ services:
     ports:
       - '5433:5432'
     environment:
-      - 'POSTGRES_USER=dbuser'
+      - 'POSTGRES_USER=db_user'
       - 'POSTGRES_PASSWORD=secrets'
-      - 'POSTGRES_DB=blaze-and-boot-db'
+      - 'POSTGRES_DB=blaze_and_boot_db'
