--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 # Datasource
-spring.datasource.username=dbuser
+spring.datasource.username=db_user
 spring.datasource.password=secrets
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost:5433/blaze-and-boot-db
+spring.datasource.url=jdbc:postgresql://localhost:5433/blaze_and_boot_db
 # DB related
 spring.jpa.open-in-view=false
 # Let the script create the schema and validate.
@@ -10,5 +10,3 @@ spring.sql.init.mode=always
 spring.sql.init.schema-locations=classpath:schema.sql
 spring.sql.init.data-locations=classpath:data.sql
 spring.jpa.hibernate.ddl-auto=validate
-# Docker image launch on startup
-spring.docker.compose.file=docker/compose.yaml
