--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 # Datasource
 spring.datasource.username=db_user
-spring.datasource.password=secrets
+spring.datasource.password=secret
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://localhost:5433/blaze_and_boot_db
 # DB related
