--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,7 @@ spring.datasource.password=secret
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://localhost:5433/blaze_and_boot_db
 # DB related
+spring.jpa.properties.hibernate.generate_statistics=true
 spring.jpa.open-in-view=false
 # Let the script create the schema and validate.
 spring.sql.init.mode=always
